--- a/src/Pocket_dial_vs_regular_call_CNN.ipynb
+++ b/src/Pocket_dial_vs_regular_call_CNN.ipynb
@@ -10,7 +10,54 @@
     "\n",
     "http://www.techtimes.com/articles/92149/20151007/911-calls-from-accidental-butt-dials-are-becoming-a-major-problem-for-emergency-services-google-report.htm\n",
     "\n",
-    "My approach is to teach a Convolutional Neural Network to distinguish between spectrograms obtained from pocket dial audio and speech audio files."
+    "My approach is to teach a Convolutional Neural Network to distinguish between spectrograms obtained from pocket dial audio and speech audio files.\n",
+    "\n",
+    "I started my research by looking into speech vs. music classification and genre classification using CNNs. \n",
+    "Some of the articles I looked into were:\n",
+    "\n",
+    "_Recognizing Sounds (A Deep Learning Case Study)_ <br>\n",
+    "https://medium.com/@awjuliani/recognizing-sounds-a-deep-learning-case-study-1bc37444d44d\n",
+    "\n",
+    "_Finding the genre of a song with Deep Learning_ <br>\n",
+    "https://chatbotslife.com/finding-the-genre-of-a-song-with-deep-learning-da8f59a61194\n",
+    "\n",
+    "_Music-Speech Discrimination_ <br>\n",
+    "http://cs229.stanford.edu/proj2016/report/KaulMalviyaGoyal-MusicSpeechDiscrimination-report.pdf\n",
+    "\n",
+    "I haven't found a single article that would talk about distinguishing between noise and speech or recognizing pocket dials.\n",
+    "\n",
+    "#### Data\n",
+    "I used about more than 1000 speech and silence samples because I decided that silence should not be interpreted as a pocket dial. Speech samples contained both male and female voices. I used VoxForge (http://www.voxforge.org/) datasets at first. However, all of the speech samples I downloaded contained only male speech. I had to record female speech samples on my own and I used an audiobook \"Little Women\" (I thought it was a reasonable choice considering that most of the characters as well as the narrator were women). The pocket dial samples I recorded myself; I tried imitating pocket dial noises by tapping on the microphone etc. In total, the dataset consisted of 2600 5-second audio samples.\n",
+    "(I can provide .p files that contain the numpy arrays, if required.)\n",
+    "\n",
+    "#### Results\n",
+    "My neural net reaches ~99% accuracy while training and 99.22% accuracy on the testing set. However, it sometimes makes unexplained mistakes when introducing it to entirely new test samples recorded during testing phase. For instance, it recognizes my speech as a regular call, but audio from a YouTube video gets classified as a pocket dial.\n",
+    "\n",
+    "#### Future work\n",
+    "It would be interesting to investigate why it misclassifies certain audio samples. So far, I haven't found a distinct pattern. Also, a more robust system would be independent of the relative loudness of an audio sample which would require audio compression. My eventual goal would be to process audio in real time without creating spectrograms which could probably be achieved by using Recurrent Neural Nets and LSTM.\n",
+    "\n",
+    "##### Filetree structure\n",
+    "\n",
+    "    ├── README.md \n",
+    "    ├── src\n",
+    "    │   └── Pocket_dial_vs_regular_call_CNN.ipynb\n",
+    "    │   └── my_cnn_model.h5\n",
+    "    │   └── test_X_main.p\n",
+    "    │   └── test_y_main.p\n",
+    "    │   └── train_X_main.p\n",
+    "    │   └── train_y_main.p\n",
+    "    │   └── validation_X_main.p\n",
+    "    │   └── validation_y_main.p\n",
+    "    ├── test_audio\n",
+    "    │   └── test_audio_0001.wav\n",
+    "    │   └── test_audio_0002.wav\n",
+    "    │   └── ...\n",
+    "    │   └── test_audio_2000.wav\n",
+    "    ├── test_spectrograms\n",
+    "    │   └── test_audio_0001_spec.png\n",
+    "    │   └── test_audio_0002_spec.png\n",
+    "    │   └── ...\n",
+    "    │   └── test_audio_2000_spec.png"
    ]
   },
   {
@@ -126,6 +173,8 @@
     "            path = os.path.join(directory, filename)\n",
     "            imgData = getImageData(path, size, grayscale)\n",
     "            label = 1.\n",
+    "            \n",
+    "            # these filenames are specific to my data\n",
     "            if filename[:4] == \"nois\" or filename[:4] == \"audi\" or filename[:4] == \"myno\":\n",
     "                label = 0.\n",
     "            data.append((imgData,label))\n",
@@ -141,7 +190,6 @@
     "    testNb = int(len(X)*testRatio)\n",
     "    trainNb = len(X)-(validationNb + testNb)\n",
     "\n",
-    "    #Prepare for Tflearn at the same time\n",
     "    train_X = np.array(X[:trainNb]).reshape([-1, size, size, 1])\n",
     "    train_y = np.array(y[:trainNb])\n",
     "    validation_X = np.array(X[trainNb:trainNb+validationNb]).reshape([-1, size, size, 1])\n",
@@ -286,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -310,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -352,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -436,8 +484,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -457,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -503,6 +552,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We test the model using 10% of our dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "258/258 [==============================] - 3s 11ms/step\n",
+      "Accuracy is 99.22%\n"
+     ]
+    }
+   ],
+   "source": [
+    "score, acc = model.evaluate(Xts, test_y)\n",
+    "print(\"Accuracy is {}%\".format(round(acc*100, 2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Next, we test the model by recording a test audio. We also save the spectrogram."
    ]
   },
@@ -534,18 +609,11 @@
     }
    ],
    "source": [
-    "import pyaudio \n",
-    "import wave\n",
-    "\n",
-    "import librosa\n",
-    "import librosa.display\n",
-    "import librosa.feature\n",
-    "\n",
     "do_rec = input(\"Test by recording sound [y/n]: \")\n",
     "\n",
     "FORMAT = pyaudio.paInt16\n",
     "CHANNELS = 1\n",
-    "RATE = 8000\n",
+    "RATE = 8000 # low rate so that the audio resembles phone call quality\n",
     "CHUNK = 1024\n",
     "RECORD_SECONDS = 5\n",
     "WAVE_OUTPUT_FILENAME = \"test_audio.wav\"\n",
@@ -653,6 +721,7 @@
     "test_ratio = 0.1\n",
     "grayscale = True\n",
     "\n",
+    "# get image data and convert to a numpy array\n",
     "imgData = getImageData(path, image_size, grayscale)\n",
     "X_predict = imgData\n",
     "X_predict = np.array(X_predict).reshape([-1, 128, 128, 1])\n",
