--- a/src/Pocket_dial_vs_regular_call_CNN.ipynb
+++ b/src/Pocket_dial_vs_regular_call_CNN.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Pocket Dial vs. Regular Call Classification\n",
     "\n",
-    "My project for the Intro to Machine Learning class attempts to classidy pocket dials vs. regular calls. The project idea was inspired by multiple reports about pocket dials wasting 911 operators' valuable time.\n",
+    "My project for the Intro to Machine Learning class attempts to classify pocket dials vs. regular calls. The project idea was inspired by multiple reports about pocket dials wasting 911 operators' valuable time.\n",
     "\n",
     "http://www.techtimes.com/articles/92149/20151007/911-calls-from-accidental-butt-dials-are-becoming-a-major-problem-for-emergency-services-google-report.htm\n",
     "\n",
